--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -519,6 +519,7 @@
                 "subtitle": "Continuez vos parcours de test en cours ou envoyez vos résultats",
                 "title": "Parcours"
             },
+            "empty-dashboard-message": "Bravo vous avez terminé les compétences recommandées, pour aller plus loin continuez à vous entrainer en retentant des compétences :",
             "presentation": "<h2>Bonjour {firstname}, découvrez votre tableau de bord.</h2><p>Accédez rapidement et facilement à vos parcours et vos tests de compétence déjà commencés.<br>Retrouvez l’évolution de votre score Pix et vérifiez si votre profil est prêt pour la certification Pix.</p>",
             "recommended-competences": {
                 "profile-link": "Toutes les compétences",
