[API] Check email availability and update it in lower case

--- a/mon-pix/translations/en.json
+++ b/mon-pix/translations/en.json
@@ -957,7 +957,8 @@
                     },
                     "errors": {
                         "wrong-format": "Your email address is invalid.",
-                        "mismatching": ""
+                        "mismatching": "",
+                        "unknown": ""
                     }
                 }
             }
