--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -957,7 +957,8 @@
                     },
                     "errors": {
                         "wrong-format": "Votre adresse e-mail n’est pas valide.",
-                        "mismatching": "Les deux adresses e-mail ne sont pas identiques. Veuillez vérifier votre saisie."
+                        "mismatching": "Les deux adresses e-mail ne sont pas identiques. Veuillez vérifier votre saisie.",
+                        "unknown": "Une erreur est survenue. Veuillez recommencer ou contacter le support."
                     }
                 }
             }
