--- a/mon-pix/translations/fr.json
+++ b/mon-pix/translations/fr.json
@@ -955,10 +955,15 @@
                     "new-email-confirmation": {
                         "label": "Confirmation de l'adresse e-mail"
                     },
+                    "password": {
+                        "label": "Mot de passe"
+                    },
                     "errors": {
                         "wrong-format": "Votre adresse e-mail n’est pas valide.",
                         "mismatching": "Les deux adresses e-mail ne sont pas identiques. Veuillez vérifier votre saisie.",
-                        "unknown": "Une erreur est survenue. Veuillez recommencer ou contacter le support."
+                        "empty": "Votre mot de passe ne peut pas être vide.",
+                        "unknown": "Une erreur est survenue. Veuillez recommencer ou contacter le support.",
+                        "invalid-password": "Le mot de passe que vous avez saisi est invalide."
                     }
                 }
             }
